Changelog
=========

0.2dev (unreleased)
-------------------

- Introduce IInstanceKey interface to allow to overwrite instance key
  calculation.
  [seletz]

0.1 (2010-05-29)
-------------------

- Initial release
  [seletz]