@@ -4,6 +4,9 @@ Changelog
 0.2dev (unreleased)
 -------------------
 
+- Added tests.
+  [seletz]
+
 - Introduce IInstanceKey interface to allow to overwrite instance key
   calculation.
   [seletz]
